--- a/css/index.css
+++ b/css/index.css
@@ -152,7 +152,10 @@ h5 {
 }
 
 /* header */
-
+header {
+  display: flex;
+  flex-direction: row-reverse;
+}
 header nav {
   display: flex;
   width: 691px;
@@ -391,6 +394,33 @@ footer {
     width: 200px;
     margin-top: 25px;
   }
+
+  .header-pic {
+    width: 100%;
+  }
+
+  .boxes {
+    width: 48%;
+  }
+  .s-bottom {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .services-info-img {
+    width: 50%;
+  }
+
+  .facts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0;
+  }
+
+  .facts p {
+    text-align: center;
+  }
   .cta {
     display: flex;
     justify-content: center;
@@ -402,6 +432,9 @@ footer {
 }
 
 @media screen and (max-width: 500px) {
+  .container {
+    width: 100%;
+  }
   header nav {
     display: flex;
     width: 100%;
@@ -413,7 +446,11 @@ footer {
     border: 1px solid gray;
     width: 500px;
     padding: 20px;
-    margin-right: 0;
+    margin: 0;
+  }
+
+  .headerImg {
+    width: 500px;
   }
 
   .main-content .top-content {
@@ -437,5 +474,18 @@ footer {
   .main-content .bottom-content .text-content {
     margin: 20px 0;
     width: 90%;
+  }
+
+  .top {
+    margin: 0 10px;
+  }
+  .s-content {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .boxes {
+    width: 90%;
+    margin: 20px;
   }
 }
