completed stretch goal and fixed logo on desktop design

--- a/css/index.css
+++ b/css/index.css
@@ -431,6 +431,7 @@ footer {
   }
 }
 
+/********** MOBILE STARTS HERE ************/
 @media screen and (max-width: 500px) {
   .container {
     width: 100%;
